syntax = "proto3";

package greet;

import "google/api/annotations.proto";

option go_package = "greetpb";

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {
    option (google.api.http) = {
      post : "/v1/greet"
      body : "*"
    };
  };

  // Server streaming
  rpc GreetManyTimes(GreetManyTimesRequest)
      returns (stream GreetManyTimesResponse) {};

  // Client stream
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

  // Bi-directional stream
  rpc GreetEveryone(stream GreetEveryoneRequest)
      returns (stream GreetEveryoneResponse) {};

  // Unary with deadline
  rpc GreetWithDeadline(GreetWithDeadlineRequest)
      returns (GreetWithDeadlineResponse) {};
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest { Greeting greeting = 1; }

message GreetResponse { string result = 1; }

message GreetManyTimesRequest { Greeting greeting = 1; }

message GreetManyTimesResponse { string result = 1; }

message LongGreetRequest { Greeting greeting = 1; }

message LongGreetResponse { string result = 1; }

message GreetEveryoneRequest { Greeting greeting = 1; }

message GreetEveryoneResponse { string result = 1; }

message GreetWithDeadlineRequest { Greeting greeting = 1; }

message GreetWithDeadlineResponse { string result = 1; }
